Added the possibility to delete words in the dict. If the query does not correspond exactly to a word in the dict, a list of 5 most similar words (according to the hamming distance) is returned

--- a/english_words.ipynb
+++ b/english_words.ipynb
@@ -22,6 +22,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb20a3ba-3adc-4d23-8193-22e2b1bcfff0",
+   "metadata": {},
+   "source": [
+    "## Utility functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cb1d17ac-af16-4cb6-b499-49b80954bef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hamming_distance_string(str_1, str_2, add_score = True):\n",
+    "    \n",
+    "    distance = 0 \n",
+    "    score = 0\n",
+    "    \n",
+    "    for char_1, char_2 in zip(str_1, str_2):\n",
+    "        \n",
+    "        if char_1 != char_2: \n",
+    "            distance += 1\n",
+    "        else: \n",
+    "            score += 1 \n",
+    "            \n",
+    "    if add_score: \n",
+    "        return distance, score \n",
+    "    else: \n",
+    "        return distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d4a16713-3edd-40cb-9fa7-e2bf805044c7",
    "metadata": {},
    "source": [
@@ -30,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "92fe66bd-2f9a-40ea-b44d-58df7c114b99",
    "metadata": {},
    "outputs": [
@@ -38,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the dictionary size amounts to 59\n"
+      "the dictionary size amounts to 62\n"
      ]
     }
    ],
@@ -67,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "4b8ed2d2-86f8-45cc-aa32-b7d3eebae58a",
    "metadata": {},
    "outputs": [
@@ -75,8 +108,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Insert the new english word:  toll booth\n",
-      "Insert the correspondence in italian:  casello autostradale\n",
+      "Insert the new english word:  assignment\n",
+      "Insert the correspondence in italian:  assegnazione, compito\n",
       "Digit y/n to add new word:  n\n"
      ]
     }
@@ -126,6 +159,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e7044aa-09f6-4e06-8ff0-03ad4b4d6076",
+   "metadata": {},
+   "source": [
+    "## Delete words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b7a2500b-5d53-48be-a5b2-6cce57aa3ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Insert the word that you want to delete nofrills\n",
+      "Here we found the 'nofrills' notion among the available ones, proceed? y/n y\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_to_delete = input(\"Insert the word that you want to delete\")\n",
+    "\n",
+    "if word_to_delete in dict_of_words.keys():\n",
+    "    \n",
+    "    confirmation = input(\"'{}' word found among the available ones, proceed? y/n\".format(word_to_delete))\n",
+    "    if confirmation.lower() == \"y\": \n",
+    "        del dict_of_words[word_to_delete]\n",
+    "    else: \n",
+    "        print(\"Re-compile the cell to execute another deleting request\") \n",
+    "else:\n",
+    "    \n",
+    "    print(\"Inserted notion not available.\") \n",
+    "    most_sim_words = [(word, hamming_distance_string(word, word_to_delete)[1]) for word in dict_of_words.keys()]\n",
+    "    most_sim_words = sorted(most_sim_words, key = lambda x : x[1], reverse = True)\n",
+    "    print(\"Here the most 5 similar words are {}\".format(most_sim_words[:5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3857032e-441a-45df-80f7-84d242a28a27",
    "metadata": {},
    "source": [
@@ -134,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "24581cc6-0557-4d88-8500-b5b44688f636",
    "metadata": {},
    "outputs": [],
@@ -171,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "39e2d1c1-7de6-48d5-b4fd-83541dd26c2c",
    "metadata": {
     "tags": []
@@ -185,6 +259,7 @@
       "'act like':'fungere'\n",
       "'albeit':'sebbene'\n",
       "'ascertain':'accertare'\n",
+      "'assignment':'assegnazione, compito'\n",
       "'at large':'in generale'\n",
       "'attached':'allegato, attaccato'\n",
       "'backbone':'spina dorsale o connessione ad altà velocità e capacità '\n",
@@ -211,6 +286,7 @@
       "'mesh':'maglia'\n",
       "'mint':'zecca'\n",
       "'nevertheless':'tuttavia'\n",
+      "'nofrill':'senza fronzoli'\n",
       "'outbound':'in uscita'\n",
       "'outgoing':'in uscita'\n",
       "'painstackingly':'scrupolosamente'\n",
@@ -221,6 +297,7 @@
       "'regardless':'senza riguardo'\n",
       "'repertoire':'lista o insieme di ...'\n",
       "'report':'riportare, registrare'\n",
+      "'route':'instradare'\n",
       "'settle':'accontentarsi'\n",
       "'sink':'pozzo'\n",
       "'solely':'solamente'\n",
@@ -230,6 +307,8 @@
       "'submit':'inviare'\n",
       "'switching':'smistamento, commutazione'\n",
       "'tailored':'su misura di...'\n",
+      "'throttle':'acceleratore, strozzare'\n",
+      "'throughput':'portata'\n",
       "'throughtout':'per tutto il...'\n",
       "'tier':'livello'\n",
       "'tinker':'armeggiare'\n",
